# librdx-stub

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
files/pkgconfig/: rdx.pc.in
include/public/: rdx.h
src/: rdx.c  rdxExports.map
